2002-11-03  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Class/reflect.java: Add array class checks.
	* mauve/gnu/testlet/java/lang/Class/reflect2.java: Uses rf_help.
	* gnu/testlet/java/lang/Class/rf_help.java: Prevent creation of
	synthetic methods.

2002-10-28  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FileInputStream/read.java: New test.
	* gnu/testlet/java/io/FileOutputStream/write.java: New test.
	* gnu/testlet/java/io/InputStreamReader/except.java: Show debug.

2002-10-27  Mark Wielaard  <mark@klomp.org>

	* gnu.testlet.java.lang.StringBuffer.StringBufferTest (test_insert):
	Test for IndexOutOfBoundException not NullPointerException.

2002-10-28  Stephen Crawley <crawley@dstc.edu.au>
        * gnu/testlet/java/lang/Class/reflect.java: Added tests for
	getField and getDeclaredField with inherited fields.

2002-10-26  Daryl Lee <dol@sources.redhat.com>

	* gnu/testlet/java/io/PushbackInputStream: Added tests for
	available() and markSupported(), to complete method tests.

2002-10-26  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResource.java: New test.

2002-10-26  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/util/LinkedHashMap/LinkedHashMapTest.java: New
	test.

2002-10-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/reflect/Method/equals.java: Add null check.

2002-10-25  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/File/listFiles.java: New test.

2002-10-23  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Class/ClassTest.java: fix subtest #2
	for Class.getClassLoader() to check for JDK 1.3/1.4 behaviour

2002-10-21  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Class/reflect2.java: Completed tests for
	inner class introspection methods.  (No testing of security yet)
	* gnu/testlet/java/lang/Class/reflect.java: ditto
	* gnu/testlet/java/lang/Class/rf2_help.java: ditto
	* gnu/testlet/java/lang/Class/rf_help.java: ditto
